--- a/karir.html
+++ b/karir.html
@@ -154,7 +154,7 @@
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Driver">
+           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Driver">
           Lamar via WhatsApp
         </a>
 
@@ -185,7 +185,7 @@
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Penjaga%20Toko">
+           href="https://wa.me/628989760020text=Saya%20ingin%20melamar%20Penjaga%20Toko">
           Lamar via WhatsApp
         </a>
 
