--- a/profil.html
+++ b/profil.html
@@ -159,6 +159,28 @@
   </div>
 </section>
 
+<!-- ===============================
+     COMPANY PROFILE CTA
+================================= -->
+<section class="kompro-cta">
+  <h2>Kenali Assistenku Lebih Dekat</h2>
+
+  <p class="kompro-desc">
+    Kami percaya bahwa kepercayaan dibangun dari keterbukaan dan komitmen yang
+    nyata. Melalui Company Profile Assistenku, Anda dapat mengenal visi, nilai,
+    serta cara kami menghadirkan layanan asistensi yang aman, profesional, dan
+    bertanggung jawab untuk individu maupun perusahaan.
+  </p>
+
+  <a href="/kompro.html" class="btn-primary kompro-btn">
+    Lihat Company Profile Assistenku
+  </a>
+
+  <p class="kompro-note">
+    Profil perusahaan, visi & misi, layanan, serta komitmen Assistenku.
+  </p>
+</section>
+  
 <footer>© 2025 Assistenku</footer>
 <script src="/script.js"></script>
 </body>
