--- a/kompro.html
+++ b/kompro.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Company Profile | Assistenku</title>
   <meta name="description" content="Company Profile Assistenku – solusi asisten profesional berbasis sistem, aman, dan terverifikasi untuk individu dan perusahaan." />
+
   <style>
     body {
       margin: 0;
@@ -12,33 +14,27 @@
       color: #1f2937;
       background: #f9fafb;
     }
+
     .container {
       max-width: 1100px;
       margin: auto;
       padding: 60px 20px;
     }
+
     h1, h2, h3 {
-      color: #0f3d8a; /* Biru Assistenku */
+      color: #0f3d8a;
       margin-bottom: 16px;
     }
-    h1 {
-      font-size: 36px;
-    }
-    h2 {
-      font-size: 28px;
-    }
-    h3 {
-      font-size: 20px;
-    }
-    p {
-      margin-bottom: 16px;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    li {
-      margin-bottom: 8px;
-    }
+
+    h1 { font-size: 36px; }
+    h2 { font-size: 28px; }
+    h3 { font-size: 20px; }
+
+    p { margin-bottom: 16px; }
+
+    ul { padding-left: 20px; }
+    li { margin-bottom: 8px; }
+
     .section {
       background: #ffffff;
       margin-bottom: 40px;
@@ -46,149 +42,183 @@
       padding: 40px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
+
     .hero {
       background: linear-gradient(135deg, #0f3d8a, #1e5fd6);
       color: #ffffff;
       text-align: center;
       padding: 80px 20px;
     }
+
     .hero h1,
-    .hero p {
-      color: #ffffff;
-    }
+    .hero p { color: #ffffff; }
+
     .tagline {
       font-size: 20px;
       margin-top: 12px;
     }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       gap: 20px;
       margin-top: 20px;
     }
+
     .card {
       background: #f3f6fb;
       padding: 24px;
       border-radius: 10px;
     }
+
+    /* === Tambahan untuk layanan lengkap === */
+    .service-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 16px;
+      margin-top: 24px;
+    }
+
+    .service-item {
+      background: #eef3ff;
+      padding: 18px;
+      border-radius: 8px;
+      font-weight: 500;
+    }
+
     .cta {
       text-align: center;
       background: #0f3d8a;
       color: #ffffff;
     }
+
     .cta h2,
-    .cta p {
-      color: #ffffff;
+    .cta p { color: #ffffff; }
+
+    .cta a {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 14px 32px;
+      background: #ffffff;
+      color: #0f3d8a;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
     }
+
     .footer {
       text-align: center;
       font-size: 14px;
       color: #6b7280;
-      padding: 20px 0 0;
+      padding: 20px 0 40px;
     }
   </style>
 </head>
-<body>  <!-- HALAMAN 1: COVER / HERO -->  <section class="hero">
-    <h1>ASSISTENKU</h1>
-    <p class="tagline">Solusi Asisten Profesional dalam Satu Sistem Terpadu</p>
-    <p>
-      Platform penyedia dan pengelola asisten profesional yang membantu individu
-      maupun perusahaan bekerja lebih tenang, terkontrol, dan efisien.
-    </p>
-  </section>  <!-- HALAMAN 2: LATAR BELAKANG & PAIN POINT -->  <section class="container">
-    <div class="section">
-      <h2>Tantangan yang Sering Dihadapi Klien</h2>
-      <p>
-        Dalam penggunaan asisten atau tenaga pendukung, baik untuk kebutuhan
-        rumah tangga maupun operasional bisnis, banyak klien menghadapi risiko
-        dan ketidakpastian.
-      </p>
-      <ul>
-        <li>Sulit menemukan asisten yang benar-benar dapat dipercaya</li>
-        <li>Tidak adanya monitoring kinerja dan bukti pekerjaan</li>
-        <li>Risiko transaksi di luar kesepakatan dan di luar sistem</li>
-        <li>Minimnya transparansi tanggung jawab dan pelaporan</li>
-        <li>Tidak ada rekam jejak kerja yang terdokumentasi</li>
-      </ul>
-    </div><!-- HALAMAN 3: SOLUSI ASSISTENKU -->
+
+<body>
+
+<!-- ===============================
+     HALAMAN 1 — HERO
+================================= -->
+<section class="hero">
+  <h1>ASSISTENKU</h1>
+  <p class="tagline">Solusi Asisten Profesional dalam Satu Sistem Terpadu</p>
+  <p>
+    Platform penyedia dan pengelola asisten profesional yang membantu individu
+    maupun perusahaan bekerja lebih tenang, terkontrol, dan efisien.
+  </p>
+</section>
+
+<section class="container">
+
+<!-- ===============================
+     HALAMAN 2 — PAIN POINT
+================================= -->
+<div class="section">
+  <h2>Tantangan yang Sering Dihadapi Klien</h2>
+  <p>
+    Dalam penggunaan asisten atau tenaga pendukung, baik untuk kebutuhan rumah
+    tangga maupun operasional bisnis, banyak klien menghadapi risiko dan
+    ketidakpastian.
+  </p>
+  <ul>
+    <li>Sulit menemukan asisten yang benar-benar dapat dipercaya</li>
+    <li>Tidak adanya monitoring kinerja dan bukti pekerjaan</li>
+    <li>Risiko transaksi di luar kesepakatan</li>
+    <li>Minimnya transparansi dan tanggung jawab</li>
+    <li>Tidak ada rekam jejak kerja yang jelas</li>
+  </ul>
+</div>
+
+<!-- ===============================
+     HALAMAN 3 — SOLUSI
+================================= -->
 <div class="section">
   <h2>Solusi dari Assistenku</h2>
   <p>
-    Assistenku hadir bukan sekadar sebagai penyedia jasa, tetapi sebagai
-    <strong>sistem pengelolaan asisten profesional</strong> yang terstruktur,
-    aman, dan siap digunakan oleh individu maupun perusahaan.
+    Assistenku hadir sebagai <strong>sistem pengelolaan asisten profesional</strong>
+    yang aman, transparan, dan terstruktur untuk individu maupun perusahaan.
   </p>
+
   <div class="grid">
     <div class="card">
       <h3>Sistem Terpusat</h3>
-      <p>
-        Semua proses, mulai dari penugasan hingga pelaporan, dilakukan dalam
-        satu platform yang terintegrasi.
-      </p>
+      <p>Penugasan, komunikasi, dan pelaporan dalam satu platform.</p>
     </div>
     <div class="card">
       <h3>Mitra Terseleksi</h3>
-      <p>
-        Mitra Assistenku melalui proses seleksi dan penilaian sebelum
-        ditugaskan kepada klien.
-      </p>
+      <p>Mitra melalui proses seleksi, evaluasi, dan standar kerja.</p>
     </div>
     <div class="card">
-      <h3>Transparan & Tercatat</h3>
-      <p>
-        Aktivitas, komunikasi, dan transaksi tercatat rapi untuk melindungi
-        semua pihak.
-      </p>
+      <h3>Transparan & Aman</h3>
+      <p>Aktivitas dan transaksi tercatat untuk perlindungan semua pihak.</p>
     </div>
   </div>
 </div>
 
-<!-- HALAMAN 4: LAYANAN UTAMA -->
+<!-- ===============================
+     HALAMAN 4 — LAYANAN LENGKAP
+================================= -->
 <div class="section">
-  <h2>Layanan Assistenku</h2>
+  <h2>Cakupan Layanan Assistenku</h2>
   <p>
-    Assistenku menyediakan berbagai jenis asisten dan mitra profesional
-    sesuai kebutuhan klien.
+    Assistenku menyediakan layanan asistensi yang fleksibel dan dapat
+    disesuaikan dengan kebutuhan individu, keluarga, maupun perusahaan.
   </p>
-  <div class="grid">
-    <div class="card">
-      <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>Membantu pekerjaan rumah tangga secara rapi, aman, dan profesional.</p>
-    </div>
-    <div class="card">
-      <h3>Asisten Kantor & Operasional</h3>
-      <p>Mendukung aktivitas administrasi dan operasional harian.</p>
-    </div>
-    <div class="card">
-      <h3>AutoCAD Drafter</h3>
-      <p>Tenaga gambar teknis Junior, Intermediate, hingga Expert.</p>
-    </div>
-    <div class="card">
-      <h3>Mitra Proyek & Teknis</h3>
-      <p>Desainer, teknisi, dan tenaga profesional berbasis proyek.</p>
-    </div>
+
+  <div class="service-list">
+    <div class="service-item">Asisten Rumah Tangga (ART)</div>
+    <div class="service-item">Asisten Pribadi & Keluarga</div>
+    <div class="service-item">Caregiver & Pendamping</div>
+    <div class="service-item">Asisten Kantor & Operasional</div>
+    <div class="service-item">AutoCAD Drafter (Junior – Expert)</div>
+    <div class="service-item">Desainer & Tenaga Kreatif</div>
+    <div class="service-item">Mitra Proyek & Tenaga Teknis</div>
+    <div class="service-item">Layanan Asistensi Khusus (By Request)</div>
   </div>
 </div>
 
-<!-- HALAMAN 5: ALUR, KEAMANAN & CTA -->
+<!-- ===============================
+     HALAMAN 5 — CTA
+================================= -->
 <div class="section cta">
   <h2>Bagaimana Assistenku Bekerja</h2>
   <p>
-    Klien mengajukan kebutuhan, Assistenku menyeleksi mitra, dan seluruh
-    proses penugasan hingga pembayaran dilakukan melalui sistem yang
-    terdokumentasi.
+    Klien mengajukan kebutuhan, Assistenku menyeleksi mitra, dan seluruh proses
+    penugasan hingga pembayaran dilakukan melalui sistem yang terdokumentasi.
   </p>
   <p>
     Dengan dukungan <strong>Safety, Legal & Audit Logging</strong>, Assistenku
     membantu klien bekerja lebih tenang dan terkontrol.
   </p>
-  <h3>Assistenku</h3>
-  <p><em>Bukan hanya membantu, tetapi memastikan.</em></p>
+
+  <a href="/layanan">Lihat Detail Layanan Assistenku</a>
 </div>
 
 <div class="footer">
   <p>&copy; Assistenku. Semua hak dilindungi.</p>
 </div>
 
-  </section></body>
+</section>
+</body>
 </html>
