--- a/kompro.html
+++ b/kompro.html
@@ -71,6 +71,35 @@
       border-radius: 10px;
     }
 
+    /* ===============================
+   VISI & MISI
+================================= */
+.visi-misi {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 32px;
+  margin-top: 24px;
+}
+
+.visi-misi h3 {
+  margin-bottom: 12px;
+  color: #0f3d8a;
+}
+
+.visi-misi p {
+  line-height: 1.7;
+  color: #374151;
+}
+
+.visi-misi ul {
+  padding-left: 20px;
+}
+
+.visi-misi li {
+  margin-bottom: 10px;
+  color: #374151;
+}
+
     /* === Tambahan untuk layanan lengkap === */
     .service-list {
       display: grid;
@@ -118,7 +147,7 @@
 <body>
 
 <!-- ===============================
-     HALAMAN 1 — HERO
+     HALAMAN — HERO
 ================================= -->
 <section class="hero">
   <h1>ASSISTENKU</h1>
@@ -132,7 +161,7 @@
 <section class="container">
 
 <!-- ===============================
-     HALAMAN 2 — PAIN POINT
+     HALAMAN — PAIN POINT
 ================================= -->
 <div class="section">
   <h2>Tantangan yang Sering Dihadapi Klien</h2>
@@ -151,7 +180,7 @@
 </div>
 
 <!-- ===============================
-     HALAMAN 3 — SOLUSI
+     HALAMAN — SOLUSI
 ================================= -->
 <div class="section">
   <h2>Solusi dari Assistenku</h2>
@@ -176,8 +205,36 @@
   </div>
 </div>
 
+  <!-- ===============================
+     HALAMAN — VISI & MISI ASSISTENKU
+================================= -->
+<div class="section">
+  <h2>Visi & Misi Assistenku</h2>
+
+  <div class="visi-misi">
+    <div class="visi">
+      <h3>Visi Kami</h3>
+      <p>
+        Menjadi layanan asistensi paling terpercaya dan mudah diakses di
+        Indonesia, yang menghadirkan ketenangan dan kenyamanan bagi setiap
+        rumah dan bisnis.
+      </p>
+    </div>
+
+    <div class="misi">
+      <h3>Misi Kami</h3>
+      <ul>
+        <li>Menyediakan tenaga kerja yang terlatih dan beretika tinggi.</li>
+        <li>Menjaga kualitas layanan dengan proses manajemen modern.</li>
+        <li>Membantu keluarga dan bisnis menjalankan kehidupan lebih efisien.</li>
+        <li>Mengedepankan keamanan, kenyamanan, dan profesionalitas.</li>
+      </ul>
+    </div>
+  </div>
+</div>
+  
 <!-- ===============================
-     HALAMAN 4 — LAYANAN LENGKAP
+     HALAMAN  — LAYANAN LENGKAP
 ================================= -->
 <div class="section">
   <h2>Cakupan Layanan Assistenku</h2>
@@ -189,17 +246,19 @@
   <div class="service-list">
     <div class="service-item">Asisten Rumah Tangga (ART)</div>
     <div class="service-item">Asisten Pribadi & Keluarga</div>
+    <div class="service-item">Driver Pribadi</div>
     <div class="service-item">Caregiver & Pendamping</div>
+    <div class="service-item">Pembuatan Website Bisnis dan Pribadi</div>
     <div class="service-item">Asisten Kantor & Operasional</div>
     <div class="service-item">AutoCAD Drafter (Junior – Expert)</div>
     <div class="service-item">Desainer & Tenaga Kreatif</div>
     <div class="service-item">Mitra Proyek & Tenaga Teknis</div>
-    <div class="service-item">Layanan Asistensi Khusus (By Request)</div>
+    <div class="service-item">Layanan Assistensi Khusus (By Request)</div>
   </div>
 </div>
 
 <!-- ===============================
-     HALAMAN 5 — CTA
+     HALAMAN  — CTA
 ================================= -->
 <div class="section cta">
   <h2>Bagaimana Assistenku Bekerja</h2>
