--- a/kompro.html
+++ b/kompro.html
@@ -141,6 +141,41 @@
       color: #6b7280;
       padding: 20px 0 40px;
     }
+    .service-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 24px;
+  margin-top: 32px;
+}
+
+.service-card {
+  background: #eef3ff;
+  border-radius: 12px;
+  padding: 24px;
+  text-align: center;
+}
+
+.service-card img {
+  width: 90px;
+  height: auto;
+  margin-bottom: 16px;
+}
+
+.service-card h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.service-card ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.service-card li {
+  margin-bottom: 6px;
+  font-size: 14px;
+    }
   </style>
 </head>
 
@@ -233,27 +268,93 @@
   </div>
 </div>
   
-<!-- ===============================
-     HALAMAN  — LAYANAN LENGKAP
-================================= -->
 <div class="section">
   <h2>Cakupan Layanan Assistenku</h2>
   <p>
-    Assistenku menyediakan layanan asistensi yang fleksibel dan dapat
-    disesuaikan dengan kebutuhan individu, keluarga, maupun perusahaan.
+    Assistenku menyediakan layanan asistensi terstruktur yang mencakup kebutuhan
+    individu, keluarga, hingga perusahaan, dengan sistem pengelolaan yang aman
+    dan terdokumentasi.
   </p>
 
-  <div class="service-list">
-    <div class="service-item">Asisten Rumah Tangga (ART)</div>
-    <div class="service-item">Asisten Pribadi & Keluarga</div>
-    <div class="service-item">Driver Pribadi</div>
-    <div class="service-item">Caregiver & Pendamping</div>
-    <div class="service-item">Pembuatan Website Bisnis dan Pribadi</div>
-    <div class="service-item">Asisten Kantor & Operasional</div>
-    <div class="service-item">AutoCAD Drafter (Junior – Expert)</div>
-    <div class="service-item">Desainer & Tenaga Kreatif</div>
-    <div class="service-item">Mitra Proyek & Tenaga Teknis</div>
-    <div class="service-item">Layanan Assistensi Khusus (By Request)</div>
+  <div class="service-grid">
+
+    <div class="service-card">
+      <img src="/assets/services/personal-family.png" alt="Asisten Pribadi & Keluarga">
+      <h3>Asisten Pribadi & Keluarga</h3>
+      <ul>
+        <li>Asisten Rumah Tangga (ART)</li>
+        <li>Baby Sitter</li>
+        <li>Pendamping Lansia</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <img src="/assets/services/office-operational.png" alt="Asisten Kantor">
+      <h3>Asisten Kantor & Operasional</h3>
+      <ul>
+        <li>Office Boy / Girl</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <img src="/assets/services/driver.png" alt="Driver Pribadi">
+      <h3>Driver Pribadi</h3>
+      <ul>
+        <li>Pengemudi Pribadi</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <img src="/assets/services/cleaning.png" alt="Tenaga Kebersihan">
+      <h3>Tenaga Kebersihan</h3>
+      <ul>
+        <li>Cleaning Service</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <img src="/assets/services/technical.png" alt="Teknis & Perbaikan">
+      <h3>Mitra Proyek & Teknis</h3>
+      <ul>
+        <li>Service & Perbaikan</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <img src="/assets/services/general.png" alt="Jasa Umum">
+      <h3>Layanan Umum / Serbaguna</h3>
+      <ul>
+        <li>Jasa Umum</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <img src="/assets/services/transport.png" alt="Transportasi & Kurir">
+      <h3>Transportasi & Kurir</h3>
+      <ul>
+        <li>Transportasi</li>
+        <li>Kirim Barang</li>
+        <li>Jastip</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <img src="/assets/services/digital.png" alt="Digital & Kreatif">
+      <h3>Digital & Kreatif</h3>
+      <ul>
+        <li>Pembuatan Website</li>
+        <li>Sistem Digital</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <img src="/assets/services/autocad.png" alt="AutoCAD & Drafting">
+      <h3>Teknis Spesialis</h3>
+      <ul>
+        <li>AutoCAD & Drafting Teknis</li>
+      </ul>
+    </div>
+
   </div>
 </div>
 
