--- a/layanan.html
+++ b/layanan.html
@@ -47,6 +47,17 @@
   </p>
 </section>
 
+<section class="page-section" style="text-align:center; margin-top:40px;">
+  <p>
+    Untuk kebutuhan layanan terkelola, kerja sama berkelanjutan, atau kebutuhan
+    korporasi, silakan lihat penawaran layanan resmi Assistenku.
+  </p>
+
+  <a href="/serviceofferings.html" class="btn-primary" style="display:inline-block; margin-top:16px;">
+    Lihat Penawaran Layanan Resmi
+  </a>
+</section>
+  
 <section>
   <h2>Daftar Layanan</h2>
 
@@ -358,6 +369,19 @@
   </div>
 </section>
 
+<section class="page-section" style="text-align:center; margin-top:60px;">
+  <h2>Kebutuhan Skala Besar atau Kerja Sama Jangka Panjang?</h2>
+
+  <p>
+    Assistenku menyediakan skema layanan terkelola untuk individu, keluarga,
+    UMKM, hingga perusahaan dengan sistem yang aman dan terdokumentasi.
+  </p>
+
+  <a href="/serviceofferings.html" class="btn-secondary" style="display:inline-block; margin-top:16px;">
+    Baca Penawaran Layanan Lengkap
+  </a>
+</section>
+  
 <section>
   <h2>Catatan & Kebijakan</h2>
 
