--- a/layanan.html
+++ b/layanan.html
@@ -111,7 +111,7 @@
 
     <!-- Pendamping Lansia -->
     <div class="card">
-      <h3>Pendamping Lansia</h3>
+      <h3>Pendamping Lansia / CareGiver</h3>
       <p>Mendampingi lansia dengan empati dan kesabaran.</p>
       <ul>
         <li>Pendamping harian</li>
