--- a/karir.html
+++ b/karir.html
@@ -104,7 +104,7 @@
 
     <!-- Pendamping Lansia -->
     <div class="card">
-      <h3>Pendamping Lansia</h3>
+      <h3>Pendamping Lansia / CareGiver</h3>
       <p>Mendampingi lansia dengan perhatian dan empati.</p>
 
       <strong>Tugas:</strong>
