--- a/karir.html
+++ b/karir.html
@@ -102,37 +102,43 @@
 
   </div>
 
-    <!-- Pendamping Lansia -->
-    <div class="card">
-      <h3>Pendamping Lansia / CareGiver</h3>
-      <p>Mendampingi lansia dengan perhatian dan empati.</p>
+   <!-- Pendamping Lansia -->
+<div class="card">
+  <!-- Thumbnail Poster -->
+  <div class="card-image">
+    <img src="loker-caregiver.png" alt="Lowongan Pendamping Lansia / Caregiver">
+  </div>
 
-      <strong>Tugas:</strong>
-      <ul>
-        <li>Pendamping aktivitas harian</li>
-        <li>Membantu kebutuhan dasar lansia</li>
-        <li>Menjadi teman bicara</li>
-      </ul>
+  <h3>Pendamping Lansia / Caregiver</h3>
+  <p>Mendampingi lansia dengan perhatian dan empati.</p>
 
-      <strong>Syarat:</strong>
-      <ul>
-        <li>Usia 20–45 tahun</li>
-        <li>Sabar, sopan, dan telaten</li>
-        <li>Sehat jasmani</li>
-      </ul>
+  <strong>Tugas:</strong>
+  <ul>
+    <li>Pendamping aktivitas harian</li>
+    <li>Membantu kebutuhan dasar lansia</li>
+    <li>Menjadi teman bicara</li>
+  </ul>
 
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
-          Lamar via WhatsApp
-        </a>
+  <strong>Syarat:</strong>
+  <ul>
+    <li>Usia 20–45 tahun</li>
+    <li>Sabar, sopan, dan telaten</li>
+    <li>Sehat jasmani</li>
+  </ul>
 
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
-          Lamar via Email
-        </a>
-      </div>
-    </div>
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
+      Lamar via WhatsApp
+    </a>
+
+    <a class="btn-secondary" target="_blank"
+       href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
+      Lamar via Email
+    </a>
+  </div>
+</div>
+
 
     <!-- Pengemudi Pribadi -->
     <div class="card">
