--- a/loker-caregiver.html
+++ b/loker-caregiver.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lowongan Caregiver / Pendamping Lansia | Assistenku</title>
-  <meta name="description" content="Lowongan kerja Caregiver / Pendamping Lansia Assistenku. Penempatan Jakarta dan sekitarnya. Lamar via WhatsApp atau Email." />
+  <meta name="description" content="Lowongan kerja Caregiver / Pendamping Lansia Assistenku. Penempatan Jakarta dan sekitarnya. Lamar secara resmi melalui Assistenku." />
 
   <style>
     :root {
@@ -34,7 +34,7 @@
     }
 
     header img {
-      max-width: 120px;
+      max-width: 140px;
       margin-bottom: 12px;
     }
 
@@ -54,20 +54,6 @@
       max-width: 960px;
       margin: 24px auto 64px;
       padding: 0 16px;
-    }
-
-    .poster {
-      background: var(--white);
-      border-radius: 12px;
-      padding: 16px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
-      text-align: center;
-    }
-
-    .poster img {
-      width: 100%;
-      max-width: 520px;
-      border-radius: 10px;
     }
 
     .card {
@@ -92,17 +78,17 @@
       display: flex;
       gap: 12px;
       flex-wrap: wrap;
-      margin-top: 24px;
+      margin-top: 32px;
     }
 
     .btn {
       flex: 1 1 220px;
       text-align: center;
       text-decoration: none;
-      padding: 14px 16px;
-      border-radius: 8px;
-      font-weight: 600;
-      transition: background 0.2s ease;
+      padding: 16px 18px;
+      border-radius: 10px;
+      font-weight: 700;
+      transition: all 0.2s ease;
     }
 
     .btn-primary {
@@ -115,12 +101,14 @@
     }
 
     .btn-secondary {
-      background: #e5e7eb;
-      color: var(--text);
+      background: #eef2ff;
+      color: var(--primary);
+      border: 2px solid var(--primary);
     }
 
     .btn-secondary:hover {
-      background: #d1d5db;
+      background: var(--primary);
+      color: var(--white);
     }
 
     footer {
@@ -139,60 +127,64 @@
 <body>
 
   <header>
-    <!-- Jika ada logo Assistenku, aktifkan baris di bawah -->
-    <!-- <img src="image/logo.png" alt="Assistenku"> -->
+    <img src="logo.png" alt="Assistenku">
     <h1>Lowongan Caregiver / Pendamping Lansia</h1>
-    <p>Assistenku – Mendampingi dengan empati dan profesional</p>
+    <p>Rekrutmen Resmi Assistenku</p>
   </header>
 
   <main class="container">
 
-    <section class="poster">
-      <img src="loker-caregiver.png" alt="Poster Lowongan Caregiver Assistenku">
-    </section>
-
     <section class="card">
       <h2>Deskripsi Pekerjaan</h2>
       <p>
-        Assistenku membuka kesempatan bagi Caregiver / Pendamping Lansia untuk membantu
-        perawatan lansia secara aman, penuh perhatian, dan bertanggung jawab.
+        Assistenku membuka kesempatan bagi Caregiver / Pendamping Lansia untuk bekerja secara
+        profesional dalam mendampingi dan merawat lansia sesuai standar layanan Assistenku.
       </p>
 
       <h2>Tugas Utama</h2>
       <ul>
         <li>Mendampingi aktivitas harian lansia</li>
         <li>Membantu kebutuhan dasar (makan, mandi, berpakaian)</li>
-        <li>Menjadi teman bicara dan pendamping emosional</li>
-        <li>Menjaga kenyamanan dan keselamatan lansia</li>
+        <li>Memberikan pendampingan emosional</li>
+        <li>Menjaga keselamatan dan kenyamanan lansia</li>
       </ul>
 
       <h2>Kualifikasi</h2>
       <ul>
         <li>Usia 20 – 45 tahun</li>
         <li>Sehat jasmani dan rohani</li>
-        <li>Sabar, sopan, dan telaten</li>
-        <li>Jujur, disiplin, dan bertanggung jawab</li>
+        <li>Sabar, jujur, sopan, dan bertanggung jawab</li>
         <li>Pengalaman Caregiver diutamakan (pemula dipersilakan melamar)</li>
       </ul>
 
-      <h2>Penempatan</h2>
-      <p>Jakarta & sekitarnya</p>
+      <h2>Sistem Kerja</h2>
+      <ul>
+        <li>Harian / Pulang–Pergi</li>
+        <li>Menginap (Live-in), sesuai kebutuhan klien</li>
+        <li>Jam kerja disesuaikan dengan kesepakatan</li>
+      </ul>
+
+      <h2>Sistem Pembagian Fee</h2>
+      <ul>
+        <li>85% untuk Caregiver / Pekerja</li>
+        <li>15% untuk Assistenku (biaya sistem, operasional, dan pengelolaan klien)</li>
+      </ul>
 
       <div class="apply-box">
         <a class="btn btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20sebagai%20Caregiver%20/%20Pendamping%20Lansia">
-          Lamar via WhatsApp
+           href="https://wa.me/628989760020?text=Saya%20ingin%20mendaftar%20sebagai%20Caregiver%20/%20Pendamping%20Lansia%20di%20Assistenku">
+          Daftar Sekarang via WhatsApp
         </a>
 
         <a class="btn btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Caregiver%20/%20Pendamping%20Lansia">
-          Lamar via Email
+           href="mailto:karirassistenku@gmail.com?subject=Pendaftaran%20Caregiver%20Assistenku">
+          Kirim Lamaran via Email
         </a>
       </div>
     </section>
 
     <footer>
-      © Assistenku • Siap membantu kebutuhan anda
+      © Assistenku • Rekrutmen Resmi & Transparan
     </footer>
 
   </main>
