--- a/loker-caregiver.html
+++ b/loker-caregiver.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lowongan Caregiver / Pendamping Lansia | Assistenku</title>
-  <meta name="description" content="Lowongan kerja Caregiver / Pendamping Lansia Assistenku. Penempatan Jakarta dan sekitarnya. Lamar secara resmi melalui Assistenku." />
+  <meta name="description" content="Lowongan kerja Caregiver / Pendamping Lansia Assistenku. Rekrutmen resmi, transparan, dan profesional." />
 
   <style>
     :root {
@@ -58,57 +58,107 @@
 
     .card {
       background: var(--white);
-      border-radius: 12px;
-      padding: 24px;
+      border-radius: 14px;
+      padding: 28px;
       margin-top: 24px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+      box-shadow: 0 10px 28px rgba(0,0,0,0.08);
     }
 
-    .card h2 {
-      margin-top: 0;
+    .section-title {
+      font-size: 20px;
+      font-weight: 700;
       color: var(--primary);
-      font-size: 22px;
+      margin: 32px 0 12px;
     }
 
-    ul {
+    .info-box {
+      background: #eef4ff;
+      border-radius: 10px;
+      padding: 16px 20px;
+      margin-bottom: 20px;
+    }
+
+    .info-box ul {
+      margin: 0;
       padding-left: 18px;
+    }
+
+    .info-box li {
+      margin-bottom: 6px;
+    }
+
+    .info-subbox {
+      background: #ffffff;
+      border-radius: 8px;
+      padding: 14px 16px;
+      margin-top: 12px;
+      border-left: 4px solid var(--primary);
+    }
+
+    .note-box {
+      background: #fff7e6;
+      border-left: 4px solid #f59e0b;
+      padding: 12px 14px;
+      margin-top: 12px;
+      font-size: 14px;
+      color: #92400e;
+    }
+
+    .apply-section {
+      background: #0b3a6f;
+      border-radius: 14px;
+      padding: 28px 20px;
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    .apply-section h3 {
+      color: #ffffff;
+      margin-top: 0;
+      margin-bottom: 8px;
+    }
+
+    .apply-section p {
+      color: #dbeafe;
+      margin-bottom: 20px;
+      font-size: 14px;
     }
 
     .apply-box {
       display: flex;
       gap: 12px;
       flex-wrap: wrap;
-      margin-top: 32px;
+      justify-content: center;
     }
 
     .btn {
       flex: 1 1 220px;
+      max-width: 260px;
       text-align: center;
       text-decoration: none;
-      padding: 16px 18px;
+      padding: 14px 16px;
       border-radius: 10px;
       font-weight: 700;
       transition: all 0.2s ease;
     }
 
     .btn-primary {
-      background: var(--primary);
-      color: var(--white);
+      background: #22c55e;
+      color: #ffffff;
     }
 
     .btn-primary:hover {
-      background: var(--primary-dark);
+      background: #16a34a;
     }
 
     .btn-secondary {
-      background: #eef2ff;
-      color: var(--primary);
-      border: 2px solid var(--primary);
+      background: #ffffff;
+      color: #0b3a6f;
+      border: 2px solid #ffffff;
     }
 
     .btn-secondary:hover {
-      background: var(--primary);
-      color: var(--white);
+      background: #dbeafe;
     }
 
     footer {
@@ -120,7 +170,7 @@
 
     @media (max-width: 600px) {
       header h1 { font-size: 24px; }
-      .card { padding: 20px; }
+      .card { padding: 22px; }
     }
   </style>
 </head>
@@ -135,52 +185,64 @@
   <main class="container">
 
     <section class="card">
-      <h2>Deskripsi Pekerjaan</h2>
-      <p>
-        Assistenku membuka kesempatan bagi Caregiver / Pendamping Lansia untuk bekerja secara
-        profesional dalam mendampingi dan merawat lansia sesuai standar layanan Assistenku.
-      </p>
 
-      <h2>Tugas Utama</h2>
-      <ul>
-        <li>Mendampingi aktivitas harian lansia</li>
-        <li>Membantu kebutuhan dasar (makan, mandi, berpakaian)</li>
-        <li>Memberikan pendampingan emosional</li>
-        <li>Menjaga keselamatan dan kenyamanan lansia</li>
-      </ul>
-
-      <h2>Kualifikasi</h2>
-      <ul>
-        <li>Usia 20 – 45 tahun</li>
-        <li>Sehat jasmani dan rohani</li>
-        <li>Sabar, jujur, sopan, dan bertanggung jawab</li>
-        <li>Pengalaman Caregiver diutamakan (pemula dipersilakan melamar)</li>
-      </ul>
-
-      <h2>Sistem Kerja</h2>
-      <ul>
-        <li>Harian / Pulang–Pergi</li>
-        <li>Menginap (Live-in), sesuai kebutuhan klien</li>
-        <li>Jam kerja disesuaikan dengan kesepakatan</li>
-      </ul>
-
-      <h2>Sistem Pembagian Fee</h2>
-      <ul>
-        <li>85% untuk Caregiver / Pekerja</li>
-        <li>15% untuk Assistenku (biaya sistem, operasional, dan pengelolaan klien)</li>
-      </ul>
-
-      <div class="apply-box">
-        <a class="btn btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Saya%20ingin%20mendaftar%20sebagai%20Caregiver%20/%20Pendamping%20Lansia%20di%20Assistenku">
-          Daftar Sekarang via WhatsApp
-        </a>
-
-        <a class="btn btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Pendaftaran%20Caregiver%20Assistenku">
-          Kirim Lamaran via Email
-        </a>
+      <div class="section-title">Deskripsi Pekerjaan</div>
+      <div class="info-box">
+        Caregiver / Pendamping Lansia bertugas membantu dan mendampingi lansia dalam aktivitas
+        sehari-hari dengan empati, tanggung jawab, dan profesionalisme.
       </div>
+
+      <div class="section-title">Sistem Kerja</div>
+      <div class="info-box">
+        <ul>
+          <li>Harian / Pulang–Pergi</li>
+          <li>Menginap (Live-in)</li>
+          <li>Jam kerja sesuai kesepakatan</li>
+        </ul>
+      </div>
+
+      <div class="section-title">Fee & Ketentuan</div>
+      <div class="info-box">
+        <div class="info-subbox">
+          <strong>Pembagian Fee</strong>
+          <ul>
+            <li>85% untuk Caregiver / Pekerja</li>
+            <li>15% untuk Assistenku (sistem & operasional)</li>
+          </ul>
+        </div>
+
+        <div class="note-box">
+          Nilai kerja dapat disesuaikan berdasarkan evaluasi performa dan kebutuhan klien.
+        </div>
+      </div>
+
+      <div class="section-title">Fasilitas (Jika Menginap)</div>
+      <div class="info-box">
+        <ul>
+          <li>Tempat tinggal</li>
+          <li>Makan</li>
+          <li>Hari libur sesuai kesepakatan</li>
+          <li>Pembayaran tepat waktu</li>
+        </ul>
+      </div>
+
+      <div class="apply-section">
+        <h3>Cara Melamar</h3>
+        <p>CV singkat (boleh via WhatsApp) & pengalaman kerja (jika ada)</p>
+
+        <div class="apply-box">
+          <a class="btn btn-primary" target="_blank"
+             href="https://wa.me/628989760020?text=Pendaftaran%20Caregiver%20Assistenku">
+            Lamar via WhatsApp
+          </a>
+
+          <a class="btn btn-secondary" target="_blank"
+             href="mailto:karirassistenku@gmail.com?subject=Pendaftaran%20Caregiver%20Assistenku">
+            Lamar via Email
+          </a>
+        </div>
+      </div>
+
     </section>
 
     <footer>
