--- a/layanan.html
+++ b/layanan.html
@@ -109,28 +109,39 @@
       </div>
     </div>
 
-    <!-- Pendamping Lansia -->
-    <div class="card">
-      <h3>Pendamping Lansia / CareGiver</h3>
-      <p>Mendampingi lansia dengan empati dan kesabaran.</p>
-      <ul>
-        <li>Pendamping harian</li>
-        <li>Aktivitas ringan</li>
-        <li>Pendamping berjalan</li>
-        <li>Dukungan emosional & sosial</li>
-      </ul>
+   <!-- Pendamping Lansia -->
+<div class="card">
 
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Halo,%20Saya%20ingin%20menanyakan%20Pendamping%20Lansia.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Pendamping%20Lansia">
-          Email Layanan Lansia
-        </a>
-      </div>
-    </div>
+  <!-- Gambar -->
+  <img 
+    src="/assets/caregiver.png" 
+    alt="Layanan Pendamping Lansia Assistenku"
+    class="card-image"
+    loading="lazy"
+  />
+
+  <h3>Pendamping Lansia / CareGiver</h3>
+  <p>Mendampingi lansia dengan empati dan kesabaran.</p>
+
+  <ul>
+    <li>Pendamping harian</li>
+    <li>Aktivitas ringan</li>
+    <li>Pendamping berjalan</li>
+    <li>Dukungan emosional & sosial</li>
+  </ul>
+
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628989760020?text=Halo,%20Saya%20ingin%20menanyakan%20Pendamping%20Lansia.">
+      Chat via WhatsApp
+    </a>
+    <a class="btn-secondary" target="_blank"
+       href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Pendamping%20Lansia">
+      Email Layanan Lansia
+    </a>
+  </div>
+
+</div>
 
     <!-- Office Boy -->
     <div class="card">
