--- a/layanan.html
+++ b/layanan.html
@@ -190,28 +190,40 @@
       </div>
     </div>
 
-    <!-- Driver -->
-    <div class="card">
-      <h3>Pengemudi Pribadi</h3>
-      <p>Pengemudi profesional dengan standar keamanan tinggi.</p>
-      <ul>
-        <li>Driver keluarga</li>
-        <li>Driver harian</li>
-        <li>Perjalanan dinas</li>
-        <li>Mengemudi aman & defensif</li>
-      </ul>
+    <!-- Pengemudi Pribadi -->
+<div class="card">
 
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20menanyakan%20layanan%20Driver.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Driver">
-          Email Layanan Driver
-        </a>
-      </div>
-    </div>
+  <!-- Gambar Pengemudi -->
+  <img
+    src="/assets/driver.png"
+    alt="Layanan Pengemudi Pribadi Assistenku"
+    class="card-image"
+    loading="lazy"
+  />
+
+  <h3>Pengemudi Pribadi</h3>
+  <p>Menyediakan pengemudi profesional untuk kebutuhan pribadi dan keluarga.</p>
+
+  <ul>
+    <li>Pengemudi harian & bulanan</li>
+    <li>Antar jemput keluarga</li>
+    <li>Pengemudi perjalanan luar kota</li>
+    <li>Mengutamakan keamanan & kenyamanan</li>
+  </ul>
+
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Pengemudi%20Pribadi.">
+      Chat via WhatsApp
+    </a>
+    <a class="btn-secondary" target="_blank"
+       href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Pengemudi%20Pribadi">
+      Email Layanan Pengemudi
+    </a>
+  </div>
+
+</div>
+
 
     <!-- ============================================ -->
     <!-- LAYANAN TAMBAHAN (Tanpa emoji, sesuai permintaan) -->
