--- a/layanan.html
+++ b/layanan.html
@@ -167,28 +167,40 @@
 
 </div>
 
-    <!-- Office Boy -->
-    <div class="card">
-      <h3>Office Boy / Girl</h3>
-      <p>Tenaga kebersihan & operasional kantor.</p>
-      <ul>
-        <li>Membersihkan area kantor</li>
-        <li>Penyajian minuman</li>
-        <li>Pengepel</li>
-        <li>Bantuan operasional ringan</li>
-      </ul>
+    <!-- Office Boy / Office Girl -->
+<div class="card">
 
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Halo,%20Saya%20ingin%20menanyakan%20layanan%20Office%20Boy.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Office%20Boy">
-          Email Layanan OB/OG
-        </a>
-      </div>
-    </div>
+  <!-- Gambar Office Boy / Girl -->
+  <img
+    src="/assets/office-boy.png"
+    alt="Layanan Office Boy dan Office Girl Assistenku"
+    class="card-image"
+    loading="lazy"
+  />
+
+  <h3>Office Boy / Office Girl</h3>
+  <p>Tenaga kebersihan dan operasional kantor yang rapi dan bertanggung jawab.</p>
+
+  <ul>
+    <li>Kebersihan area kantor</li>
+    <li>Membantu operasional harian</li>
+    <li>Penyajian minuman & kebutuhan rapat</li>
+    <li>Menjaga kerapihan lingkungan kerja</li>
+  </ul>
+
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Office%20Boy%20atau%20Office%20Girl.">
+      Chat via WhatsApp
+    </a>
+    <a class="btn-secondary" target="_blank"
+       href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Office%20Boy%20Office%20Girl">
+      Email Layanan Office
+    </a>
+  </div>
+
+</div>
+
 
     <!-- Pengemudi Pribadi -->
 <div class="card">
