--- a/layanan.html
+++ b/layanan.html
@@ -264,28 +264,40 @@
       </div>
     </div>
 
-    <!-- CLEANING SERVICE -->
-    <div class="card">
-      <h3>CLEANING SERVICE</h3>
-      <p>Layanan kebersihan profesional untuk rumah, kantor, dan area bisnis.</p>
-      <ul>
-        <li>Pembersihan menyeluruh</li>
-        <li>Pengepel & vakum</li>
-        <li>Pembersihan kamar mandi & dapur</li>
-        <li>Jasa kebersihan terjadwal</li>
-      </ul>
+   <!-- Cleaning Service -->
+<div class="card">
 
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-          href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20menanyakan%20CLEANING%20SERVICE.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-          href="mailto:kontakassistenku@gmail.com?subject=Info%20Cleaning%20Service">
-          Email Cleaning Service
-        </a>
-      </div>
-    </div>
+  <!-- Gambar Cleaning Service -->
+  <img
+    src="/assets/cleaning-service.png"
+    alt="Layanan Cleaning Service Profesional Assistenku"
+    class="card-image"
+    loading="lazy"
+  />
+
+  <h3>Cleaning Service</h3>
+  <p>Layanan kebersihan profesional untuk rumah, kantor, dan area bisnis.</p>
+
+  <ul>
+    <li>Kebersihan rumah & apartemen</li>
+    <li>Kebersihan kantor & area kerja</li>
+    <li>Pembersihan area komersial</li>
+    <li>Standar kebersihan & higienitas</li>
+  </ul>
+
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Cleaning%20Service.">
+      Chat via WhatsApp
+    </a>
+    <a class="btn-secondary" target="_blank"
+       href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Cleaning%20Service">
+      Email Layanan Cleaning Service
+    </a>
+  </div>
+
+</div>
+
 
     <!-- KIRIM BARANG & JASTIP -->
     <div class="card">
