Fix HTML structure and add link for legal documents

--- a/profil.html
+++ b/profil.html
@@ -149,6 +149,7 @@
       <p>Dokumen pendukung usaha, sertifikasi, dan izin operasional lainnya.</p>
 
       <img src="/NIB2.png" class="legal-img">
+      </div
 
       <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk"
          class="btn-primary" target="_blank">
