--- a/karir.html
+++ b/karir.html
@@ -107,7 +107,7 @@
       Lamar via Email
     </a>
 
-    <a class="btn-outline" href="/marketing-freelance.html">
+    <a class="btn-outline" href="/marketing-freelancer.html">
       Lihat Detail Program
     </a>
   </div>
