--- a/karir.html
+++ b/karir.html
@@ -58,147 +58,138 @@
   <div class="card-grid">
 
     <!-- Marketing Freelance -->
-<div class="card">
+    <div class="card">
+      <div class="card-image">
+        <img src="loker-marketing-freelance.png"
+             alt="Lowongan Marketing Freelance Assistenku">
+      </div>
 
-  <!-- Thumbnail Poster -->
-  <div class="card-image">
-    <img src="loker-marketing-freelance.png"
-         alt="Lowongan Marketing Freelance Assistenku">
-  </div>
+      <h3>Marketing Freelance</h3>
+      <p>
+        Kesempatan bagi individu yang ingin mendapatkan penghasilan tambahan
+        dengan memasarkan layanan Assistenku secara fleksibel dan profesional.
+      </p>
 
-  <h3>Marketing Freelance</h3>
+      <strong>Peran Utama:</strong>
+      <ul>
+        <li>Mempromosikan layanan Assistenku kepada calon klien</li>
+        <li>Membantu klien memahami kebutuhan layanan</li>
+        <li>Menghubungkan klien dengan tim Assistenku</li>
+      </ul>
 
-  <p>
-    Kesempatan bagi individu yang ingin mendapatkan penghasilan tambahan
-    dengan memasarkan layanan Assistenku secara fleksibel dan profesional.
-  </p>
+      <strong>Skema Komisi:</strong>
+      <ul>
+        <li>Komisi tetap <strong>Rp100.000</strong> per <strong>SPL LOLOS</strong></li>
+        <li>Bonus target bulanan hingga <strong>Rp1.500.000</strong></li>
+        <li>Komisi dibayar setelah SPL berstatus <strong>SELESAI</strong></li>
+        <li>Tidak berbasis persentase profit</li>
+        <li>Tidak ada potongan pajak & BPJS</li>
+      </ul>
 
-  <strong>Peran Utama:</strong>
-  <ul>
-    <li>Mempromosikan layanan Assistenku kepada calon klien</li>
-    <li>Membantu klien memahami kebutuhan layanan</li>
-    <li>Menghubungkan klien dengan tim Assistenku</li>
-  </ul>
+      <strong>Cocok untuk:</strong>
+      <ul>
+        <li>Freelancer / pekerja lepas</li>
+        <li>Pekerja aktif yang ingin penghasilan tambahan</li>
+        <li>Individu dengan relasi luas</li>
+      </ul>
 
-  <strong>Skema Komisi:</strong>
-  <ul>
-    <li>Komisi tetap <strong>Rp100.000</strong> per <strong>SPL LOLOS</strong></li>
-    <li>Bonus target bulanan hingga <strong>Rp1.500.000</strong></li>
-    <li>Komisi dibayar setelah SPL berstatus <strong>SELESAI</strong></li>
-    <li>Tidak berbasis persentase profit</li>
-    <li>Tidak ada potongan pajak & BPJS</li>
-  </ul>
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Marketing%20Freelance%20Assistenku">
+          Lamar via WhatsApp
+        </a>
 
-  <strong>Cocok untuk:</strong>
-  <ul>
-    <li>Freelancer / pekerja lepas</li>
-    <li>Pekerja aktif yang ingin penghasilan tambahan</li>
-    <li>Individu dengan relasi luas</li>
-  </ul>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20CV%20Marketing%20Freelance%20Assistenku">
+          Lamar via Email
+        </a>
 
-  <div class="apply-box">
-    <a class="btn-primary" target="_blank"
-       href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Marketing%20Freelance%20Assistenku">
-      Lamar via WhatsApp
-    </a>
-
-    <a class="btn-secondary" target="_blank"
-       href="mailto:karirassistenku@gmail.com?subject=Lamaran%20CV%20Marketing%20Freelance%20Assistenku">
-      Lamar via Email
-    </a>
-
-    <a class="btn-outline" href="/marketing-freelancer.html">
-      Lihat Detail Program
-    </a>
-  </div>
-
-</div>
-
-  <!-- ART -->
-  <div class="card">
-
-    <!-- Thumbnail Poster -->
-    <div class="card-image">
-      <img src="loker-art.png" alt="Lowongan Asisten Rumah Tangga (ART)">
+        <a class="btn-outline" href="/marketing-freelancer.html">
+          Lihat Detail Program
+        </a>
+      </div>
     </div>
 
-    <h3>Asisten Rumah Tangga (ART)</h3>
-    <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
+    <!-- ART -->
+    <div class="card">
+      <div class="card-image">
+        <img src="loker-art.png" alt="Lowongan Asisten Rumah Tangga (ART)">
+      </div>
 
-    <strong>Tugas:</strong>
-    <ul>
-      <li>Pembersihan rumah</li>
-      <li>Mencuci & menyetrika</li>
-      <li>Memasak dasar</li>
-    </ul>
+      <h3>Asisten Rumah Tangga (ART)</h3>
+      <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
 
-    <strong>Syarat:</strong>
-    <ul>
-      <li>Usia 18–50 tahun</li>
-      <li>Jujur & bertanggung jawab</li>
-      <li>Sehat jasmani</li>
-    </ul>
+      <strong>Tugas:</strong>
+      <ul>
+        <li>Pembersihan rumah</li>
+        <li>Mencuci & menyetrika</li>
+        <li>Memasak dasar</li>
+      </ul>
 
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20ART">
-        Lamar via WhatsApp
-      </a>
+      <strong>Syarat:</strong>
+      <ul>
+        <li>Usia 18–50 tahun</li>
+        <li>Jujur & bertanggung jawab</li>
+        <li>Sehat jasmani</li>
+      </ul>
 
-      <a class="btn-secondary" target="_blank"
-         href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20ART">
-        Lamar via Email
-      </a>
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20ART">
+          Lamar via WhatsApp
+        </a>
 
-      <a class="btn-outline" href="loker-art.html">
-        Lihat Detail Lowongan
-      </a>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20ART">
+          Lamar via Email
+        </a>
+
+        <a class="btn-outline" href="loker-art.html">
+          Lihat Detail Lowongan
+        </a>
+      </div>
     </div>
 
-  </div>
+    <!-- Pendamping Lansia -->
+    <div class="card">
+      <div class="card-image">
+        <img src="loker-caregiver.png"
+             alt="Lowongan Pendamping Lansia / Caregiver">
+      </div>
 
-  </div>
+      <h3>Pendamping Lansia / Caregiver</h3>
+      <p>Mendampingi lansia dengan perhatian dan empati.</p>
 
-   <!-- Pendamping Lansia -->
-<div class="card">
-  <!-- Thumbnail Poster -->
-  <div class="card-image">
-    <img src="loker-caregiver.png" alt="Lowongan Pendamping Lansia / Caregiver">
-  </div>
+      <strong>Tugas:</strong>
+      <ul>
+        <li>Pendamping aktivitas harian</li>
+        <li>Membantu kebutuhan dasar lansia</li>
+        <li>Menjadi teman bicara</li>
+      </ul>
 
-  <h3>Pendamping Lansia / Caregiver</h3>
-  <p>Mendampingi lansia dengan perhatian dan empati.</p>
+      <strong>Syarat:</strong>
+      <ul>
+        <li>Usia 20–45 tahun</li>
+        <li>Sabar, sopan, dan telaten</li>
+        <li>Sehat jasmani</li>
+      </ul>
 
-  <strong>Tugas:</strong>
-  <ul>
-    <li>Pendamping aktivitas harian</li>
-    <li>Membantu kebutuhan dasar lansia</li>
-    <li>Menjadi teman bicara</li>
-  </ul>
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
+          Lamar via WhatsApp
+        </a>
 
-  <strong>Syarat:</strong>
-  <ul>
-    <li>Usia 20–45 tahun</li>
-    <li>Sabar, sopan, dan telaten</li>
-    <li>Sehat jasmani</li>
-  </ul>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
+          Lamar via Email
+        </a>
 
-    <a class="btn-primary" target="_blank"
-       href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
-      Lamar via WhatsApp
-    </a>
-
-    <a class="btn-secondary" target="_blank"
-       href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
-      Lamar via Email
-    </a>
-
-    <!-- Tombol Detail Lowongan -->
-    <a class="btn-outline" href="loker-caregiver.html">
-      Lihat Detail Lowongan
-    </a>
-  </div>
-</div>
+        <a class="btn-outline" href="loker-caregiver.html">
+          Lihat Detail Lowongan
+        </a>
+      </div>
+    </div>
 
     <!-- Pengemudi Pribadi -->
     <div class="card">
@@ -251,7 +242,7 @@
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020text=Saya%20ingin%20melamar%20Penjaga%20Toko">
+           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Penjaga%20Toko">
           Lamar via WhatsApp
         </a>
 
@@ -264,11 +255,12 @@
 
     <!-- AutoCAD Drafter -->
     <div class="card">
-      <img src="/loker-autocad-drafter.png" class="card-image"
-           alt="Lowongan AutoCAD Drafter Assistenku">
+      <div class="card-image">
+        <img src="/loker-autocad-drafter.png"
+             alt="Lowongan AutoCAD Drafter Assistenku">
+      </div>
 
       <h3>AutoCAD Drafter (Junior – Intermediate – Expert)</h3>
-
       <p>
         Kesempatan bagi Fresh Graduate maupun profesional untuk bergabung
         melalui proyek nyata dan berkelanjutan bersama Assistenku.
@@ -276,12 +268,12 @@
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20ART">
+           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20AutoCAD%20Drafter">
           Lamar via WhatsApp
         </a>
 
         <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20autoCAD%20Drafter%20-%20Junior">
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20AutoCAD%20Drafter">
           Lamar via Email
         </a>
 
@@ -292,7 +284,8 @@
     </div>
 
   </div>
-  </section>
+</section>
+
 
 
 <footer>© 2025 Assistenku</footer>
