--- a/profil.html
+++ b/profil.html
@@ -40,7 +40,6 @@
   </div>
 </header>
 
-
 <!-- ===============================
      PROFIL — CONTENT
 ================================= -->
@@ -107,23 +106,22 @@
   <div class="card-grid">
 
     <div class="card">
-      <img src="/founder1.png" class="founder-img">
+      <img src="/founder1.png" class="founder-img" alt="Founder Assistenku">
       <h3>Abdurrahman Hanif</h3>
       <p>
         Founder Assistenku. Memiliki pengalaman dalam operasional, manajemen,
-        dan layanan asistensi modern. Hanif membangun Assistenku dengan fokus
-        pada kejujuran, profesionalitas, dan kemudahan layanan untuk masyarakat.
+        dan layanan asistensi modern. Fokus pada kejujuran, profesionalitas,
+        dan kemudahan layanan untuk masyarakat.
       </p>
     </div>
 
     <div class="card">
-      <img src="/founder2.png" class="founder-img">
+      <img src="/founder2.png" class="founder-img" alt="Co-Founder Assistenku">
       <h3>Putri Rahmadani</h3>
       <p>
         Co-Founder Assistenku. Berpengalaman dalam rekrutmen dan pengembangan
-        tenaga kerja rumah tangga, caregiver, dan asistensi pribadi.
-        Bertanggung jawab terhadap penyusunan kurikulum pelatihan serta standar
-        kualitas tenaga kerja.
+        tenaga kerja, bertanggung jawab terhadap kurikulum pelatihan serta
+        standar kualitas tenaga kerja.
       </p>
     </div>
 
@@ -140,24 +138,28 @@
 
     <div class="card">
       <h3>NIB Resmi</h3>
-      <p>Dokumen resmi yang membuktikan perusahaan telah terdaftar secara legal.</p>
-      <img src="/NIB1.png" class="legal-img">
+      <p>Dokumen resmi pendaftaran usaha.</p>
+      <img src="/NIB1.png" class="legal-img" alt="NIB Assistenku">
+    </div>
+
+    <div class="card">
+      <h3>Dokumen AHU</h3>
+      <p>Akta dan pengesahan badan hukum dari Kementerian Hukum dan HAM.</p>
+      <img src="/assets/AHU1.jpg" class="legal-img" alt="AHU PT Assistenku Solusi Indonesia">
     </div>
 
     <div class="card">
       <h3>Dokumen Legal Lain</h3>
-      <p>Dokumen pendukung usaha, sertifikasi, dan izin operasional lainnya.</p>
+      <p>Sertifikasi dan izin operasional pendukung.</p>
+      <img src="/NIB2.png" class="legal-img" alt="Dokumen Legal Lain">
+    </div>
 
-      <img src="/NIB2.png" class="legal-img">
-      </div
-        
-        <div class="card">
-      <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk"
+    <div class="card">
+      <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view"
          class="btn-primary" target="_blank">
         Lihat Semua Dokumen Legalitas
       </a>
 
-      <!-- Tombol ke Subdomain Legal -->
       <a href="https://legal.assistenku.com"
          class="btn-primary"
          style="margin-top:12px; display:inline-block;"
@@ -176,10 +178,8 @@
   <h2>Kenali Assistenku Lebih Dekat</h2>
 
   <p class="kompro-desc">
-    Kami percaya bahwa kepercayaan dibangun dari keterbukaan dan komitmen yang
-    nyata. Melalui Company Profile Assistenku, Anda dapat mengenal visi, nilai,
-    serta cara kami menghadirkan layanan asistensi yang aman, profesional, dan
-    bertanggung jawab untuk individu maupun perusahaan.
+    Kepercayaan dibangun dari keterbukaan dan komitmen nyata.
+    Pelajari visi, nilai, dan layanan Assistenku secara menyeluruh.
   </p>
 
   <a href="/kompro.html" class="btn-primary kompro-btn">
@@ -190,8 +190,11 @@
     Profil perusahaan, visi & misi, layanan, serta komitmen Assistenku.
   </p>
 </section>
-  
-<footer>© 2025 Assistenku</footer>
+
+<footer>
+  © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
+</footer>
+
 <script src="/script.js"></script>
 </body>
-</html>
+                                                                        </html>
