--- a/karir.html
+++ b/karir.html
@@ -288,7 +288,9 @@
 
 
 
-<footer>© 2025 Assistenku</footer>
+<footer>
+  © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
+</footer>
 <script src="/script.js"></script>
 </body>
 </html>
