--- a/hargawebsite.html
+++ b/hargawebsite.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paket Pembuatan Website | Assistenku</title>
+  <title>Paket Pembuatan Website | PT Assistenku Solusi Indonesia</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
