--- a/loker-art.html
+++ b/loker-art.html
@@ -280,5 +280,5 @@
 </html>
 
 <footer style="text-align:center; font-size:0.85em; color:#777; margin:30px 0;">
-  © 2025 Assistenku. All rights reserved.
+  © 2025 PT Assistenku Solusi Indonesia. All rights reserved.
 </footer>
