--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
 
   <link rel="stylesheet" href="/styles.css" />
 </head>
-
+<link rel="manifest" href="/manifest.webmanifest">
+<meta name="theme-color" content="#0B5ED7">
+<link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
+  
 <body>
 
 <header>
