--- a/karir.html
+++ b/karir.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Karir | Assistenku</title>
   <link rel="stylesheet" href="/styles.css">
+  <link rel="manifest" href="/manifest.webmanifest">
+<meta name="theme-color" content="#0B5ED7">
+<link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
 </head>
 
 <body>
