--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
   <br>
   <a href="/layanan" class="btn-primary">Lihat Layanan Kami</a>
 </section>
+  
+  <button
+  id="installAppBtn"
+  class="btn-primary"
+  style="display:none; margin-left:10px;"
+  onclick="installAssistenku()"
+>
+  Install Assistenku
+  </button>
 
 <footer>
   © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
