--- a/index.html
+++ b/index.html
@@ -130,14 +130,7 @@
   <a href="/layanan" class="btn-primary">Lihat Layanan Kami</a>
 </section>
   
-  <button
-  id="installAppBtn"
-  class="btn-primary"
-  style="display:none; margin-left:10px;"
-  onclick="installAssistenku()"
->
-  Install Assistenku
-  </button>
+  <button id="installAppBtn" class="btn-primary">Install</button>
 
 <footer>
   © 2025 <strong>PT Assistenku Solusi Indonesia</strong>
