--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   </div>
 
   <div class="pwa-install__right">
-    <button id="pwaInstallBtn" class="pwa-install__btn">Instal</button>
+    <button id="pwaInstallBtn" class="pwa-install__btn">Instal Untuk Android</button>
   </div>
   </div>
 </body>
