--- a/index.html
+++ b/index.html
@@ -149,5 +149,9 @@
     <button id="pwaInstallBtn" class="pwa-install__btn">Instal Untuk Android</button>
   </div>
   </div>
+  <div id="iosInstallHint" style="display:none; margin-top:12px; font-size:14px;">
+  <strong>Instal Untuk Pengguna iPhone:</strong><br>
+  Buka melalui <b>Safari</b> → tap <b>Share</b> → <b>Add to Home Screen</b>
+  </div>
 </body>
 </html>
