--- a/index.html
+++ b/index.html
@@ -146,12 +146,18 @@
   </div>
 
   <div class="pwa-install__right">
-    <button id="pwaInstallBtn" class="pwa-install__btn">Instal Untuk Android</button>
-  </div>
-  </div>
-  <div id="iosInstallHint" style="display:none; margin-top:12px; font-size:14px;">
-  <strong>Instal Untuk Pengguna iPhone:</strong><br>
+  <button id="pwaInstallBtn" class="pwa-install__btn" style="display:none;">
+    Instal untuk Android
+  </button>
+</div>
+
+<div
+  id="iosInstallHint"
+  style="display:none; margin-top:12px; font-size:14px;"
+>
+  <strong>Instal untuk Pengguna iPhone:</strong><br>
   Buka melalui <b>Safari</b> → tap <b>Share</b> → <b>Add to Home Screen</b>
-  </div>
+</div>
+  
 </body>
 </html>
