--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
   <a href="/layanan" class="btn-primary">Lihat Layanan Kami</a>
 </section>
 
-<button id="pwaInstallBtn" class="btn-primary" style="display:none;" type="button">
-  Install Aplikasi Assistenku (Android)
+<button id="pwaInstallBtn" class="btn-primary" type="button">
+  Install Aplikasi (Android)
 </button>
   
 <footer>
