--- a/layanan.html
+++ b/layanan.html
@@ -275,39 +275,45 @@
 </div>
     
 
-   <!-- Pembuatan Website & Sistem -->
-<div class="card">
+    <!-- Pembuatan Website & Sistem -->
+  <div class="card">
 
-  <!-- Gambar Website & Sistem -->
-  <img
-    src="/assets/web-system.png"
-    alt="Layanan Pembuatan Website dan Sistem Assistenku"
-    class="card-image"
-    loading="lazy"
-  />
+    <!-- Gambar Website & Sistem -->
+    <img
+      src="/assets/web-system.png"
+      alt="Layanan Pembuatan Website dan Sistem Assistenku"
+      class="card-image"
+      loading="lazy"
+    />
 
-  <h3>Pembuatan Website & Sistem</h3>
-  <p>Menyediakan pengembangan website dan sistem digital sesuai kebutuhan bisnis.</p>
+    <h3>Pembuatan Website & Sistem</h3>
+    <p>Menyediakan pengembangan website dan sistem digital sesuai kebutuhan bisnis.</p>
 
-  <ul>
-    <li>Website company profile & landing page</li>
-    <li>Sistem informasi & dashboard</li>
-    <li>Aplikasi berbasis web (PWA)</li>
-    <li>Maintenance & pengembangan lanjutan</li>
-  </ul>
+    <ul>
+      <li>Website company profile &amp; landing page</li>
+      <li>Sistem informasi &amp; dashboard</li>
+      <li>Aplikasi berbasis web (PWA)</li>
+      <li>Maintenance &amp; pengembangan lanjutan</li>
+    </ul>
 
-  <div class="apply-box">
-    <a class="btn-primary" target="_blank"
-       href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Pembuatan%20Website%20dan%20Sistem.">
-      Chat via WhatsApp
-    </a>
-    <a class="btn-secondary" target="_blank"
-       href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Pembuatan%20Website%20dan%20Sistem">
-      Email Layanan Website & Sistem
-    </a>
+    <div class="apply-box">
+      <a class="btn-tertiary" href="/hargawebsite.html">
+        Lihat Harga Website &amp; Sistem
+      </a>
+
+      <a class="btn-primary" target="_blank" rel="noopener"
+        href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Pembuatan%20Website%20dan%20Sistem.">
+        Chat via WhatsApp
+      </a>
+
+      <a class="btn-secondary" target="_blank" rel="noopener"
+        href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Pembuatan%20Website%20dan%20Sistem">
+        Email Layanan Website &amp; Sistem
+      </a>
+    </div>
+
   </div>
 
-</div>
 
   <!-- AutoCAD & Drafting Teknis -->
 <div class="card">
