--- a/serviceofferings.html
+++ b/serviceofferings.html
@@ -284,7 +284,7 @@
     </a>
 
     <a class="btn-pdf"
-       href="https://drive.google.com/file/d/1gGpyo3mDiacEJvHZrhO6e37EfiGDsKJL/view?usp=drive_link"
+       href="https://drive.google.com/file/d/1VAYOs2PmIo7M5f8I6LLwA8zMubNuxUbk/view?usp=sharing"
        target="_blank">
       Download PDF Penawaran
     </a>
