--- a/layanan.html
+++ b/layanan.html
@@ -64,7 +64,39 @@
 <section>
   <h2>Daftar Layanan</h2>
 
-  <div class="card-grid">
+  <!-- Catering (Dapur Putri) - card paling awal -->
+<div class="card">
+
+  <!-- Logo Dapur Putri -->
+  <img
+    src="/assets/dapurputrilogo.png"
+    alt="Dapur Putri - Catering Premium"
+    class="card-image"
+    loading="lazy"
+  />
+
+  <h3>Catering — Dapur Putri</h3>
+  <p>Catering rumahan dengan kualitas premium. Menu variatif, higienis, dan siap untuk kebutuhan harian maupun acara.</p>
+
+  <ul>
+    <li>Menu harian & paket keluarga</li>
+    <li>Pesanan acara & kebutuhan kantor</li>
+    <li>Pengantaran sesuai kesepakatan</li>
+    <li>Pemesanan cepat via WhatsApp / GoFood</li>
+  </ul>
+
+  <div class="apply-box">
+    <a class="btn-primary" href="/dapurputri.html">
+      Lihat Menu Catering
+    </a>
+
+    <a class="btn-secondary" target="_blank" rel="noopener"
+       href="https://wa.me/6285186660020?text=Halo%20Dapur%20Putri,%20saya%20ingin%20pesan%20catering.">
+      Pesan via WhatsApp
+    </a>
+  </div>
+
+  </div>
 
    <!-- ART -->
 <div class="card">
