--- a/karir.html
+++ b/karir.html
@@ -10,7 +10,7 @@
 <link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
 </head>
 
-<body>
+<body class="karir-page">
 
 <header>
   <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
