--- a/dapurputri.html
+++ b/dapurputri.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dapur Putri — Catering & Homemade Premium</title>
-  <meta name="description" content="Dapur Putri — hidangan rumahan premium dengan kualitas rapi seperti catering bintang 5. Pesan via WhatsApp, Email, atau GoFood." />
+  <meta name="description" content="Dapur Putri — hidangan rumahan premium dengan kualitas rapi. Pesan via WhatsApp, Email, atau GoFood." />
 
   <link rel="stylesheet" href="/assets/dapurputri.css" />
 </head>
