--- a/dapurputri.html
+++ b/dapurputri.html
@@ -41,7 +41,7 @@
       <div class="hero-grid">
         <div class="hero-card">
           <div class="kicker"><span class="dot"></span><span>Rasa rumahan, presentasi premium</span></div>
-          <h1>Dapur Putri — Catering &amp; Homemade yang tampil “kelas bintang 5”.</h1>
+          <h1>Dapur Putri — Catering Homemade</h1>
           <p class="subtitle">
             Hidangan hangat dengan tampilan rapi, porsi jelas, dan rasa konsisten.
             Cocok untuk makan harian, keluarga, maupun kebutuhan acara.
