Update link to mockup website in layanan.html

--- a/layanan.html
+++ b/layanan.html
@@ -334,9 +334,8 @@
   <div class="apply-box">
 
     <!-- LINK KE MOCKUP (ROOT) -->
-    <a class="btn-outline"
-       href="/mockupwebsite.html">
-      Lihat Contoh Mockup Website
+    <a class="btn-outline" href="/mockupwebsite/">
+  Lihat Contoh Mockup Website
     </a>
 
     <a class="btn-tertiary" href="/hargawebsite.html">
